# metrics-catalogue

./: Cargo.toml  README.md
.github/workflows/: rust.yml
catalogue/: Cargo.toml
catalogue/src/: lib.rs  metrics.rs  registry.rs
macros/: Cargo.toml  README.md
macros/src/: ast.rs  lib.rs  metric_scope.rs  metric_tree.rs  scoped_catalogue.rs
src/: lib.rs  metrics.rs  registry.rs
src/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs
src/prometheus/: mod.rs  server.rs  utils.rs
tests/: empty_root_name.rs  integration_tests.rs  metrics.rs  prometheus.rs  root_override.rs  separator.rs
