[package]
name = "metrics-catalogue"
version = "0.1.0"
edition = "2018"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]
license = "Apache-2.0"
description = "Metrics Catalogue"
repository = "https://github.com/sadroeck/metrics-catalogue"
documentation = "https://docs.rs/metrics-catalogue"
categories = ["metrics"]
readme = "README.md"

[workspace]
members = [ "macros" ]

[dependencies]
metrics-catalogue-macros = { path = "macros", version = "0.1" }
metrics = "0.16"
