[package]
name = "metrics-catalogue-macros"
version = "0.3.0"
edition = "2018"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]
license = "Apache-2.0"
description = "Macro core of the metrics-catalogue crate"
repository = "https://github.com/sadroeck/metrics-catalogue"
documentation = "https://docs.rs/metrics-catalogue"
categories = ["development-tools::profiling"]
keywords = ["metrics", "metric", "catalogue", "prometheus", "macro"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
prometheus = []

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
lazy_static = "1.4"
